# DnDTools

./: CMakeLists.txt
include/: AppState.h  CLArgs.h  ModeFunctions.h  Options.h  Roll.h  StatColumn.h  ThrowOptions.h  ThrowStats.h
include/codegen/: Modes.h  Options.h
src/: CLArgs.c  ModeFunctions.c  Modes.cpp  Modes.hpp  Options.c  Options.hpp  ParseCLI.cpp  ParseCLI.hpp  Roll.c  Roll.cpp  Roll.hpp  StatColumn.c  ThrowOptions.c  ThrowStats.c  main.c  main.cpp
